Rust/tests/Language/fail_compile/enum_reserved_tag_field.to
enum Bad {
  Item(tag),
}
# expect_error: Enum variant field "tag" is reserved
